# eclipse-docker-compose

./: .gitignore  AGENTS.md
admin/: .swj  .swk  .swl  .swm  .swn  TestMain.java  docker-compose.yml  docker-compose.yml.backup
admin-app/: docker-compose.yml
bot/: HELP.md  docker-compose.yaml  docker-compose.yaml.old
bytebase/: _docker-compose.yml  (+1 more)
eclipse-bot/: .env.example  .gitignore  Dockerfile  README.md  debug_status.txt  docker-compose.yml  pyproject.toml  test_regex.py
eclipse-bot/config/: config.yaml
eclipse-bot/directives/: create_workflow.md
eclipse-bot/prompts/: default.md  intent_check.md  llm_chat.md
eclipse-bot/src/: __init__.py  config.py  main.py  models.py
eclipse-bot/src/agents/: __init__.py  factory.py  prompts.py  subagents.py  utils.py
eclipse-bot/src/agents/tools/: code_review_skill.py
eclipse-bot/src/api/: routes.py
eclipse-bot/src/common/: enums.py
eclipse-bot/src/core/: __init__.py  checkpointer.py  compactor.py  config.py  context.py  conversation_store.py  dispatcher.py  llm_client.py  model_registry.py  perforce_client.py  registry.py  retry.py  slack_client.py  slack_streamer.py  workflow_engine.py
eclipse-bot/src/skills/: code_review.py
eclipse-bot/src/tools/: __init__.py  bash_tools.py  code_tools.py  file_tools.py  opensearch_tools.py  p4_tools.py  session_tools.py  slack_tools.py
eclipse-bot/src/utils/: __init__.py  prompt_loader.py
eclipse-bot/src/workflows/: __init__.py  base.py  code_review.py  echo.py  llm_chat.py  reset_session.py
eclipse-bot/src/workflows/examples/: __init__.py  simple_chat.py  workflows.py
eclipse-bot/tests/: test_core.py  verify_context.py  verify_opensearch.py  verify_strict_models.py
(+1491 files in other folders)
