[project]
name = "eclipse-bot"
version = "0.1.0"
description = "Intelligent AI agent for workflow automation with Slack and OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "slack-bolt>=1.18.0",
    "aiohttp>=3.9.0",
    "langgraph>=0.0.40",
    "langchain-core>=0.1.20",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
